Add new architecture
