# app/Models/Category.php
@@ -1,42 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Builder;
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
-use Illuminate\Database\Eloquent\Relations\HasMany;
-
-/**
- * @property int $id
- * @property string $name
- * @property \Illuminate\Support\Carbon|null $created_at
- * @property \Illuminate\Support\Carbon|null $updated_at
- * @property-read \Illuminate\Database\Eloquent\Collection<int, \App\Models\Dish> $dishes
- * @property-read int|null $dishes_count
- * @property-read \Illuminate\Database\Eloquent\Collection<int, \App\Models\CategoryWeight> $weights
- * @property-read int|null $weights_count
- * @method static \Database\Factories\CategoryFactory factory($count = null, $state = [])
- * @method static Builder<static>|Category newModelQuery()
- * @method static Builder<static>|Category newQuery()
- * @method static Builder<static>|Category query()
- * @method static Builder<static>|Category whereCreatedAt($value)
- * @method static Builder<static>|Category whereId($value)
- * @method static Builder<static>|Category whereName($value)
- * @method static Builder<static>|Category whereUpdatedAt($value)
- * @mixin \Eloquent
- */
-class Category extends Model
-{
-    use HasFactory;
-    protected $fillable = ['name'];
-
-    public function dishes(): HasMany
-    {
-        return $this->hasMany(Dish::class);
-    }
-    public function weights(): HasMany
-    {
-        return $this->hasMany(CategoryWeight::class);
-    }
-}
